--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -9,6 +9,41 @@ parameters:
     default: true
 
 jobs:
+  test-unreal:
+    parameters:
+      image:
+        type: string
+        default: "ghcr.io/epicgames/unreal-engine:dev-5.3"
+    docker:
+      - image: << parameters.image >>
+        auth:
+          username: $GHCR_USERNAME
+          password: $GHCR_TOKEN
+    working_directory: ~/project
+    steps:
+      - checkout
+      - run:
+          name: Install Miniconda and Python 3.10
+          command: |
+            curl -sLo Miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+            bash Miniconda.sh -b -p $HOME/miniconda
+            echo "source $HOME/miniconda/bin/activate" >> $BASH_ENV
+            source $BASH_ENV
+            conda install -y python=3.10
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: "Run Tests"
+          command: |
+            python -m pip install .
+            python -m xrfeitoria.utils.publish_plugins -u "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
+            export XRFEITORIA__DIST_ROOT="src/dist"
+            export XRFEITORIA__VERSION=`python -c "import xrfeitoria; print(xrfeitoria.__version__)"`
+            python -m tests.setup_ci -u "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
+            python -m tests.unreal.main
+      - store_test_results:
+          path: /home/ue4/project/tests/unreal/unreal.log
+
   test-self-host:
     machine: true
     resource_class: haiyimei/windows-machines
@@ -66,50 +101,20 @@ jobs:
           command: |
             python -m pip install .
             python -m xrfeitoria.utils.publish_plugins -u "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
-      - save_cache:
-          key: unreal-<< parameters.image >>
-          paths:
-            - src/dist/
       - store_artifacts:
           path: src/dist/
           destination: Plugins
 
-  test-unreal:
-    parameters:
-      image:
-        type: string
-        default: "ghcr.io/epicgames/unreal-engine:dev-5.3"
-    docker:
-      - image: << parameters.image >>
-        auth:
-          username: $GHCR_USERNAME
-          password: $GHCR_TOKEN
-    working_directory: ~/project
-    steps:
-      - checkout
-      - run:
-          name: Install Miniconda and Python 3.10
-          command: |
-            curl -sLo Miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-            bash Miniconda.sh -b -p $HOME/miniconda
-            echo "source $HOME/miniconda/bin/activate" >> $BASH_ENV
-            source $BASH_ENV
-            conda install -y python=3.10
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - restore_cache:
-          key: unreal-<< parameters.image >>
-      - run:
-          name: "Run Tests"
-          command: |
-            python -m pip install .
-            export XRFEITORIA__DIST_ROOT="src/dist"
-            export XRFEITORIA__VERSION=`python -c "import xrfeitoria; print(xrfeitoria.__version__)"`
-            python -m tests.setup_ci -u "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
-            python -m tests.unreal.main
-
-
 workflows:
+  test-workflow:
+    when: << pipeline.parameters.run-test >>
+    jobs:
+      - test-unreal:
+          name: "Run Tests - UE"
+          matrix:
+            parameters:
+              image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
+
   build-plugins-workflow:
     when: << pipeline.parameters.build-unreal-plugin >>
     jobs:
@@ -120,15 +125,6 @@ workflows:
             - test-self-host
       - build-plugins-linux:
           name: "Build Plugins - Linux UE"
-          matrix:
-            parameters:
-              image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
-
-  test-plugins-workflow:
-    when: << pipeline.parameters.run-test >>
-    jobs:
-      - test-unreal:
-          name: "Run Tests - UE"
           matrix:
             parameters:
               image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
