--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -174,12 +174,11 @@ workflows:
       #     matrix:
       #       parameters:
       #         image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
-      - blender:
-          name: "Blender - Linux"
+      - blender
       - publish-github-release:
           name: "Publish GitHub Release"
-          # requires:
-            # - blender
+          requires:
+            - blender
             # - unreal-windows
             # - unreal-linux
           # filters:
