--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -161,8 +161,8 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            VERSION=$(cat ./src/dist/version.txt)
-            rm -f ./src/dist/version.txt
+            VERSION=$(cat ./artifacts/src/dist/version.txt)
+            rm -f ./artifacts/src/dist/version.txt
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/src/dist/
 
 workflows:
