--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -191,32 +191,64 @@ jobs:
             VERSION=$(cat ./artifacts/src/dist/version.txt)
             rm -f ./artifacts/src/dist/version.txt
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/src/dist/
+  
+  tmp:
+    docker:
+      - image: cibuilds/github:0.10
+    parameters:
+      build-unreal-plugin:
+        type: boolean
+        default: true
+      run-test:
+        type: boolean
+        default: true
+    steps:
+      - run:
+          name: "Test Parameters"
+          parameters:
+            build-unreal-plugin: << parameters.build-unreal-plugin >>
+            run-test: << parameters.run-test >>
+          command: |
+            echo "Build Unreal Plugin: $BUILD_UNREAL_PLUGIN"
+            echo "Run Test: $RUN_TEST"
+            if [ "$BUILD_UNREAL_PLUGIN" = "true" ]; then
+              echo "Building Unreal Plugin"
+            fi
+            if [ "$RUN_TEST" = "true" ]; then
+              echo "Running Tests"
+            fi
 
 workflows:
   plugin-workflow:
     jobs:
-      # -- Unreal -- #
-      - test-self-host
-      - unreal-windows:
+      # # -- Unreal -- #
+      # - test-self-host
+      # - unreal-windows:
+      #     build-unreal-plugin: << pipeline.parameters.build-unreal-plugin >>
+      #     run-test: << pipeline.parameters.run-test >>
+      #     requires:
+      #       - test-self-host
+      # - unreal-linux:
+      #     build-unreal-plugin: << pipeline.parameters.build-unreal-plugin >>
+      #     run-test: << pipeline.parameters.run-test >>
+      #     matrix:
+      #       parameters:
+      #         image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
+      # # -- Blender -- #
+      # - blender:
+      #     run-test: << pipeline.parameters.run-test >>
+      # # -- Publish -- #
+      # - publish-github-release:
+      #     requires:
+      #       - blender
+      #       - unreal-windows
+      #       - unreal-linux
+      #     filters:
+      #       tags:
+      #         only: /^v\d+\.\d+\.\d+/
+
+      # -- Temp -- #
+      - tmp:
           build-unreal-plugin: << pipeline.parameters.build-unreal-plugin >>
           run-test: << pipeline.parameters.run-test >>
-          requires:
-            - test-self-host
-      - unreal-linux:
-          build-unreal-plugin: << pipeline.parameters.build-unreal-plugin >>
-          run-test: << pipeline.parameters.run-test >>
-          matrix:
-            parameters:
-              image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
-      # -- Blender -- #
-      - blender:
-          run-test: << pipeline.parameters.run-test >>
-      # -- Publish -- #
-      - publish-github-release:
-          requires:
-            - blender
-            - unreal-windows
-            - unreal-linux
-          filters:
-            tags:
-              only: /^v\d+\.\d+\.\d+/
+
